<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="service_started">Location Service started</string>
    <string name="service_label">Location Service Label</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to ETA!</string>
    <string name="toViewTripActivity">ViewTrip</string>
    <string name="toCreateTripActivity">CreateTrip</string>
    <string name="toViewTripHistory">TripHistory</string>
    <string name="ViewTP_tid">Trip Id</string>
    <string name="ViewTP_tname">Trip Name</string>
    <string name="ViewTP_location">Trip Location</string>
    <string name="ViewTP_time">Trip Time</string>
    <!-- string name="ViewStartername">Trip Members</string> -->
    <string name="ViewTP_member">Trip Members</string>
    <string name="ViewStarterlocaton">Starter location</string>
    <string name="CreateTripname">Trip name</string>
    <string name="CreateTriplocation">Destiontion</string>
    <string name="CreateTriptime">Trip time</string>
    <string name="CreateTripstartername">starter name</string>
    <string name="CreateTripstartercurlocation">starter location</string>
    <string name="createdone">Done</string>
    <string name="createcancel">Cancel</string>
    <string name="Contacts">Add Friends</string>
    <string name="tripNameHint">Input trip name</string>
    <string name="tripDateHint">Input trip date</string>
    <string name="tripTimeHint">Input trip time</string>
    <string name="tripDestinationHint">Input trip destination</string>
    <string name="searchThemeHint">Input search theme</string>
    
</resources>
