<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgnew" >
    
<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
  
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:id ="@+id/TP_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="@string/CreateTripname"/>
    <EditText
        android:id="@+id/Tripnameinput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/tripNameHint"
        android:inputType="text" 
        android:cursorVisible="false"
        android:selectAllOnFocus="true" />
    </LinearLayout>    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:id ="@+id/tripdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Date"/>
    <EditText
        android:id="@+id/create_trip_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/tripDateHint"
        android:cursorVisible="false"
        android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:id="@+id/TPtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="@string/CreateTriptime"/>
    <EditText
        android:id="@+id/TPtimeinput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/tripTimeHint"
        android:inputType="text"
        android:cursorVisible="false"
        android:selectAllOnFocus="true" />
     </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="6" 
             android:orientation="vertical">
             <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" 
                  android:orientation="horizontal">
                   <TextView
                            android:id="@+id/TP_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="0dp"  
                            android:text="@string/CreateTriplocation"/>
                   <EditText
                            android:id="@+id/locationText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="0dp"
                            android:hint="@string/tripDestinationHint"
                            android:inputType="text"
                            android:selectAllOnFocus="true" />
               </LinearLayout>
        
               <LinearLayout
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content" 
                           android:orientation="horizontal">
                           <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="0dp"  
                                 android:text="Search Theme:"/>
                            <EditText
                                 android:id="@+id/search_theme"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="0dp"
                                 android:hint="@string/searchThemeHint"
                                 android:selectAllOnFocus="true" />
                 </LinearLayout>
          </LinearLayout>
          <Button
              android:id="@+id/btsearch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="Search" />
    </LinearLayout>
    

        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:id="@+id/TPstartername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="@string/CreateTripstartername"/>
    <EditText
        android:id="@+id/TPstarternameinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="Input starter name"
        android:inputType="text"
        android:selectAllOnFocus="true" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
    
        <Button
             android:id="@+id/viewContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Contacts" />
        
        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
             android:orientation="horizontal">
             <TextView
                   android:id="@+id/txt_contacts"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" 
                   android:padding="5dp" />
                 

         </LinearLayout>
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Location result:"/>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Name:"/>
    <TextView
        android:id="@+id/locname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Address:"/>
    <TextView
        android:id="@+id/locaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Latitude:"/>
    <TextView
        android:id="@+id/loclat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Longitude"/>
    <TextView
        android:id="@+id/loclgt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/buttoncancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="10dp"  
        android:layout_marginLeft="130dp"
        android:text="@string/createcancel" />
    <Button
        android:id="@+id/buttondone"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="130dp"
        android:text="@string/createdone"/>
    </LinearLayout>    

 
    <TextView
        android:id="@+id/nouse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp" />
   
    
</LinearLayout>

</ScrollView>